// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogServer: get /runs > returns a 200 with all runs when authenticated with role host 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 5,
        "name": "run-name-1",
        "status": "running",
      },
      "id": "run-id-1",
      "relationships": {
        "experiment": {
          "data": {
            "id": "exp-id",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "log-run-id-1-1",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
    {
      "attributes": {
        "lastLogNumber": 0,
        "name": "run-name-2",
        "status": "completed",
      },
      "id": "run-id-2",
      "relationships": {
        "experiment": {
          "data": {
            "id": "exp-id",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs > returns a 200 with all runs when authenticated with role host 2`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": undefined,
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;

exports[`LogServer: get /runs > returns a 200 with empty array when no runs found 1`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": [],
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs and requested related experiment 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 15,
        "name": "my-run-name",
        "status": "running",
      },
      "id": "my-run-id",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "log-my-run-id-1",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "getExperiments:experimentName",
      },
      "id": "1",
      "type": "experiments",
    },
  ],
}
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs and requested related experiment 2`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": [
        "my-run-id",
      ],
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs and requested related lastLogs 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 15,
        "name": "my-run-name",
        "status": "running",
      },
      "id": "my-run-id",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "log-my-run-id-1",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "logType": "log-type",
        "number": 15,
        "values": {},
      },
      "id": "log-my-run-id-1",
      "relationships": {
        "run": {
          "data": {
            "id": "my-run-id",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs and requested related lastLogs 2`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": [
        "my-run-id",
      ],
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs and requested related lastLogs and experiments 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 15,
        "name": "my-run-name",
        "status": "running",
      },
      "id": "my-run-id",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "log-my-run-id-1",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
  "included": [
    {
      "attributes": {
        "name": "getExperiments:experimentName",
      },
      "id": "1",
      "type": "experiments",
    },
    {
      "attributes": {
        "logType": "log-type",
        "number": 15,
        "values": {},
      },
      "id": "log-my-run-id-1",
      "relationships": {
        "run": {
          "data": {
            "id": "my-run-id",
            "type": "runs",
          },
        },
      },
      "type": "logs",
    },
  ],
}
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs and requested related lastLogs and experiments 2`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": [
        "my-run-id",
      ],
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs when authenticated as participant 1`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 15,
        "name": "my-run-name",
        "status": "running",
      },
      "id": "my-run-id",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "log-my-run-id-1",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs when authenticated as participant 2`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": [
        "my-run-id",
      ],
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs when authenticated as participant 3`] = `
{
  "data": [
    {
      "attributes": {
        "lastLogNumber": 15,
        "name": "my-run-name",
        "status": "running",
      },
      "id": "my-run-id",
      "relationships": {
        "experiment": {
          "data": {
            "id": "1",
            "type": "experiments",
          },
        },
        "lastLogs": {
          "data": [
            {
              "id": "log-my-run-id-1",
              "type": "logs",
            },
          ],
        },
      },
      "type": "runs",
    },
  ],
}
`;

exports[`LogServer: get /runs > returns a 200 with participant-owned runs when authenticated as participant 4`] = `
[
  [
    {
      "experimentId": undefined,
      "experimentName": undefined,
      "runId": [
        "my-run-id",
      ],
      "runName": undefined,
      "runStatus": undefined,
    },
  ],
]
`;
